--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Frontend Development</p>
+              <p>1+ years <br />Frontend Development <br> UX/UI designer</p>
             </div>
             <div class="details-container">
               <img
@@ -102,7 +102,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>-Degree In Front-end development<br />-UI/UX Degree</p>
+              <p>-Front-end development<br />-UI/UX designer</p>
             </div>
           </div>
           <div class="text-container">
