--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>ReactJs</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -179,7 +179,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -207,7 +207,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">UX/UI</h2>
             <div class="article-container">
               <article>
                 <img
@@ -216,7 +216,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
+                  <h3>Graphic design</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -227,7 +227,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
+                  <h3>Figma/Adobe</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -238,7 +238,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>Sketch</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -249,7 +249,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Wireframes & Prototypes</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -264,69 +264,145 @@
         onclick="location.href='./#projects'"
       />
     </section>
-    <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
-            <div class="btn-container">
-              <a
-                class="btn btn-color-2 project-btn"
-                href='https://github.com/rencyngina/law-firm'
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Github
-            </a>
-              <a
-                class="btn btn-color-2 project-btn"
-                href='https://digital-credentials-wallet.vercel.app/'
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Live Demo
-            </a>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
-            <div class="btn-container">
-              <a
-                class="btn btn-color-2 project-btn"
-                href='https://github.com/rencyngina/law-firm/'
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Github
-              </a>
-              <a
-                class="btn btn-color-2 project-btn"
-                href='https://royfordlaw.com/'
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Live Demo
-            </a>
-            </div>
-          </div>
-       
-    </section>
+    <!-- ... (previous code) ... -->
+
+<section id="projects">
+  <p class="section__text__p1">Browse My Recent</p>
+  <h1 class="title">Projects</h1>
+  <div class="experience-details-container">
+    <div class="about-containers">
+      <!-- Project 1 Container -->
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img
+            src="./assets/project-1.png"
+            alt="Project 1"
+            class="project-img"
+          />
+        </div>
+        <h2 class="experience-sub-title project-title">Project One</h2>
+        <div class="btn-container">
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://github.com/rencyngina/law-firm'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Github
+          </a>
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://digital-credentials-wallet.vercel.app/'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Live Demo
+          </a>
+        </div>
+      </div>
+
+      <!-- Project 2 Container -->
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img
+            src="./assets/project-2.png"
+            alt="Project 2"
+            class="project-img"
+          />
+        </div>
+        <h2 class="experience-sub-title project-title">Project Two</h2>
+        <div class="btn-container">
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://github.com/rencyngina/law-firm/'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Github
+          </a>
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://royfordlaw.com/'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Live Demo
+          </a>
+        </div>
+      </div>
+
+      <!-- Project 3 Container -->
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img
+            src="./assets/foodstore.png"
+            alt="Project 3"
+            class="project-img"
+          />
+        </div>
+        <h2 class="experience-sub-title project-title">Project Three</h2>
+        <div class="btn-container">
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://github.com/rencyngina/tokyo-revengers'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Github
+          </a>
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://tokyo-revengers-chi.vercel.app/'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Live Demo
+          </a>
+        </div>
+      </div>
+
+      <!-- Project 4 Container -->
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img
+            src="./assets/shoestudio.png"
+            alt="Project 4"
+            class="project-img"
+          />
+        </div>
+        <h2 class="experience-sub-title project-title">Project Four</h2>
+        <div class="btn-container">
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://github.com/rencyngina/shoes-farm'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Github
+          </a>
+          <a
+            class="btn btn-color-2 project-btn"
+            href='https://shoes-farm.vercel.app/'
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Live Demo
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <img
+    src="./assets/arrow.png"
+    alt="Arrow icon"
+    class="icon arrow"
+    onclick="location.href='./#contact'"
+  />
+</section>
+
+<!-- ... (remaining code) ... -->
+
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
