--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           </a>
           <a
             class="btn btn-color-2 project-btn"
-            href='https://royfordlaw.com/'
+            href='https://www.royfordlaw.com/'
             target="_blank"
             rel="noopener noreferrer"
           >
